--- a/addons/backups-restic/backups-restic.yaml
+++ b/addons/backups-restic/backups-restic.yaml
@@ -55,7 +55,7 @@ spec:
 {{ end }}
           initContainers:
           - name: snapshotter
-            image: {{ Registry "gcr.io" }}/etcd-development/etcd:v3.5.16
+            image: {{ Registry "registry.k8s.io" }}/etcd:3.5.16-0
             imagePullPolicy: IfNotPresent
             command:
               - etcdctl
@@ -86,7 +86,7 @@ spec:
               readOnly: true
           containers:
           - name: uploader
-            image: {{ Registry "docker.io" }}/restic/restic:0.17.1
+            image: {{ Registry "ghcr.io" }}/restic/restic:0.17.3
             imagePullPolicy: IfNotPresent
             command:
             - /bin/sh
