Kustomize csi-external-snapshotter
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/csi-external-snapshotter/snapshotter.yaml
+++ b/addons/csi-external-snapshotter/snapshotter.yaml
@@ -1,10 +1,8 @@
-# Sourced from https://github.com/kubernetes-csi/external-snapshotter/tree/v8.1.0/client/config/crd
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/814
+    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/1150
     controller-gen.kubebuilder.io/version: v0.15.0
   name: volumegroupsnapshotclasses.groupsnapshot.storage.k8s.io
 spec:
@@ -30,7 +28,7 @@ spec:
         - jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
-      name: v1alpha1
+      name: v1beta1
       schema:
         openAPIV3Schema:
           description: |-
@@ -96,7 +94,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/1068
+    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/1150
     controller-gen.kubebuilder.io/version: v0.15.0
   name: volumegroupsnapshotcontents.groupsnapshot.storage.k8s.io
 spec:
@@ -139,7 +137,7 @@ spec:
         - jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
-      name: v1alpha1
+      name: v1beta1
       schema:
         openAPIV3Schema:
           description: |-
@@ -320,8 +318,6 @@ spec:
                   x-kubernetes-validations:
                     - message: both volumeGroupSnapshotRef.name and volumeGroupSnapshotRef.namespace must be set
                       rule: has(self.name) && has(self.__namespace__)
-                    - message: volumeGroupSnapshotRef is immutable
-                      rule: self == oldSelf
               required:
                 - deletionPolicy
                 - driver
@@ -340,8 +336,9 @@ spec:
                     The format of this field is a Unix nanoseconds time encoded as an int64.
                     On Unix, the command date +%s%N returns the current time in nanoseconds
                     since 1970-01-01 00:00:00 UTC.
-                  format: int64
-                  type: integer
+                    This field is the source for the CreationTime field in VolumeGroupSnapshotStatus
+                  format: date-time
+                  type: string
                 error:
                   description: |-
                     Error is the last observed error during group snapshot creation, if any.
@@ -359,40 +356,6 @@ spec:
                       format: date-time
                       type: string
                   type: object
-                pvVolumeSnapshotContentList:
-                  description: |-
-                    PVVolumeSnapshotContentList is the list of pairs of PV and
-                    VolumeSnapshotContent for this group snapshot
-                    The maximum number of allowed snapshots in the group is 100.
-                  items:
-                    description: |-
-                      PVVolumeSnapshotContentPair represent a pair of PV names and
-                      VolumeSnapshotContent names
-                    properties:
-                      persistentVolumeRef:
-                        description: PersistentVolumeRef is a reference to the persistent volume resource
-                        properties:
-                          name:
-                            description: |-
-                              Name of the referent.
-                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              TODO: Add other useful fields. apiVersion, kind, uid?
-                            type: string
-                        type: object
-                        x-kubernetes-map-type: atomic
-                      volumeSnapshotContentRef:
-                        description: VolumeSnapshotContentRef is a reference to the volume snapshot content resource
-                        properties:
-                          name:
-                            description: |-
-                              Name of the referent.
-                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              TODO: Add other useful fields. apiVersion, kind, uid?
-                            type: string
-                        type: object
-                        x-kubernetes-map-type: atomic
-                    type: object
-                  type: array
                 readyToUse:
                   description: |-
                     ReadyToUse indicates if all the individual snapshots in the group are ready to be
@@ -406,6 +369,31 @@ spec:
                     If a storage system does not provide such an id, the
                     CSI driver can choose to return the VolumeGroupSnapshot name.
                   type: string
+                volumeSnapshotHandlePairList:
+                  description: |-
+                    VolumeSnapshotHandlePairList is a list of CSI "volume_id" and "snapshot_id"
+                    pair returned by the CSI driver to identify snapshots and their source volumes
+                    on the storage system.
+                  items:
+                    description: VolumeSnapshotHandlePair defines a pair of a source volume handle and a snapshot handle
+                    properties:
+                      snapshotHandle:
+                        description: |-
+                          SnapshotHandle is a unique id returned by the CSI driver to identify a volume
+                          snapshot on the storage system
+                          Required.
+                        type: string
+                      volumeHandle:
+                        description: |-
+                          VolumeHandle is a unique id returned by the CSI driver to identify a volume
+                          on the storage system
+                          Required.
+                        type: string
+                    required:
+                      - snapshotHandle
+                      - volumeHandle
+                    type: object
+                  type: array
               type: object
           required:
             - spec
@@ -419,7 +407,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/1068
+    api-approved.kubernetes.io: https://github.com/kubernetes-csi/external-snapshotter/pull/1150
     controller-gen.kubebuilder.io/version: v0.15.0
   name: volumegroupsnapshots.groupsnapshot.storage.k8s.io
 spec:
@@ -453,7 +441,7 @@ spec:
         - jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
-      name: v1alpha1
+      name: v1beta1
       schema:
         openAPIV3Schema:
           description: |-
@@ -603,6 +591,7 @@ spec:
                     The format of this field is a Unix nanoseconds time encoded as an int64.
                     On Unix, the command date +%s%N returns the current time in nanoseconds
                     since 1970-01-01 00:00:00 UTC.
+                    This field is updated based on the CreationTime field in VolumeGroupSnapshotContentStatus
                   format: date-time
                   type: string
                 error:
@@ -626,38 +615,6 @@ spec:
                       format: date-time
                       type: string
                   type: object
-                pvcVolumeSnapshotRefList:
-                  description: |-
-                    VolumeSnapshotRefList is the list of PVC and VolumeSnapshot pairs that
-                    is part of this group snapshot.
-                    The maximum number of allowed snapshots in the group is 100.
-                  items:
-                    description: PVCVolumeSnapshotPair defines a pair of a PVC reference and a Volume Snapshot Reference
-                    properties:
-                      persistentVolumeClaimRef:
-                        description: PersistentVolumeClaimRef is a reference to the PVC this pair is referring to
-                        properties:
-                          name:
-                            description: |-
-                              Name of the referent.
-                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              TODO: Add other useful fields. apiVersion, kind, uid?
-                            type: string
-                        type: object
-                        x-kubernetes-map-type: atomic
-                      volumeSnapshotRef:
-                        description: VolumeSnapshotRef is a reference to the VolumeSnapshot this pair is referring to
-                        properties:
-                          name:
-                            description: |-
-                              Name of the referent.
-                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              TODO: Add other useful fields. apiVersion, kind, uid?
-                            type: string
-                        type: object
-                        x-kubernetes-map-type: atomic
-                    type: object
-                  type: array
                 readyToUse:
                   description: |-
                     ReadyToUse indicates if all the individual snapshots in the group are ready
@@ -1595,3 +1552,205 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: snapshot-controller
+  namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: snapshot-controller-leaderelection
+  namespace: kube-system
+rules:
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - watch
+      - list
+      - delete
+      - update
+      - create
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: snapshot-controller-runner
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - persistentvolumes
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - persistentvolumeclaims
+    verbs:
+      - get
+      - list
+      - watch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - list
+      - watch
+      - create
+      - update
+      - patch
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshotclasses
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshotcontents
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+      - update
+      - delete
+      - patch
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshotcontents/status
+    verbs:
+      - patch
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshots
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshots/status
+    verbs:
+      - update
+      - patch
+  - apiGroups:
+      - groupsnapshot.storage.k8s.io
+    resources:
+      - volumegroupsnapshotclasses
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - groupsnapshot.storage.k8s.io
+    resources:
+      - volumegroupsnapshotcontents
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+      - update
+      - delete
+      - patch
+  - apiGroups:
+      - groupsnapshot.storage.k8s.io
+    resources:
+      - volumegroupsnapshotcontents/status
+    verbs:
+      - patch
+  - apiGroups:
+      - groupsnapshot.storage.k8s.io
+    resources:
+      - volumegroupsnapshots
+    verbs:
+      - get
+      - list
+      - watch
+      - update
+      - patch
+  - apiGroups:
+      - groupsnapshot.storage.k8s.io
+    resources:
+      - volumegroupsnapshots/status
+    verbs:
+      - update
+      - patch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: snapshot-controller-leaderelection
+  namespace: kube-system
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: snapshot-controller-leaderelection
+subjects:
+  - kind: ServiceAccount
+    name: snapshot-controller
+    namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: snapshot-controller-role
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: snapshot-controller-runner
+subjects:
+  - kind: ServiceAccount
+    name: snapshot-controller
+    namespace: kube-system
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: snapshot-controller
+  namespace: kube-system
+spec:
+  minReadySeconds: 35
+  replicas: 2
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: snapshot-controller
+  strategy:
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: snapshot-controller
+    spec:
+      containers:
+        - args:
+            - --v=5
+            - --leader-election=true
+          image: '{{ .InternalImages.Get "CSISnapshotController" }}'
+          imagePullPolicy: IfNotPresent
+          name: snapshot-controller
+      serviceAccountName: snapshot-controller
